--- a/styles/style.css
+++ b/styles/style.css
@@ -27,9 +27,38 @@
     margin-top: 100px;
   }
 }
+.midContenedor {
+  width: 700px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 150px;
+  align-items: center;
+  border-radius: 50px;
+  overflow: hidden;
+  background-color: var(--colorW);
+}
+
+@media (max-width: 767px) {
+  .midContenedor {
+    margin-top: 0px;
+    border-radius: 0;
+    width: 100vw;
+  }
+}
+@media (min-width: 767px) and (max-width: 1025px) {
+  .midContenedor {
+    margin-top: 100px;
+  }
+}
+@media (min-width: 1026px) and (max-width: 1366px) {
+  .midContenedor {
+    margin-top: 100px;
+  }
+}
 .contenedorTitulo {
   background-color: var(--color3);
-  width: 500px;
+  width: 100%;
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -69,18 +98,6 @@
     text-align: center;
   }
 }
-#inputEmail {
-  background: url("../images/at-solid.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
-#inputPass {
-  background: url("../images/key-solid.svg") no-repeat right;
-  background-position: 96% 50%;
-  background-size: 20px;
-}
-
 .inputField {
   padding-left: 15px;
   padding-right: 25px;
@@ -89,6 +106,25 @@
   border-radius: 12px;
   border: 1px solid #4ebbf2;
   font-family: "Montserrat", sans-serif;
+}
+
+#inputEmail {
+  background: url("../images/at-solid.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+}
+
+#inputEmailRecover {
+  background: url("../images/at-solid.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
+  width: 500px;
+}
+
+#inputPass {
+  background: url("../images/key-solid.svg") no-repeat right;
+  background-position: 96% 50%;
+  background-size: 20px;
 }
 
 .butLog {
